[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
queues = "1.0.2"
itertools = "0.10.5"
eval = "0.4.3"
ndarray = "0.15.6"
genevo = "0.7.1"
genetic_algorithm = "0.6.0"
rand = "0.8.5"
sscanf = "0.4.0"
